<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cliente.ClienteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Trevo.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Trevo.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/capa_detalhe"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:scaleType="centerCrop"
            android:src="@drawable/detalhe_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="-20dp"
            android:background="@color/fundo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capa_detalhe"
            app:shapeAppearanceOverlay="@style/rounded_up" />

        <ScrollView
            android:id="@+id/sc_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintBottom_toTopOf="@id/bt_orcamento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_produto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Condor EM"
                    android:textColor="@color/appbar"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/divider"
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/appbar"
                    app:layout_constraintEnd_toEndOf="@+id/tv_produto"
                    app:layout_constraintStart_toStartOf="@+id/tv_produto"
                    app:layout_constraintTop_toBottomOf="@+id/tv_produto" />

                <TextView
                    android:id="@+id/tv_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="A Linha EM foi desenvolvida especialmente para pulverização localizada, com alto rendimento operacional e custo reduzido de manutenção.\nReservatório de 600 litros, feito em polietileno, com acabamento polido das superfícies interna e externa para facilitar a limpeza. Resiste aos impactos e corrosões"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/lb_cultura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/cultura"
                    android:textColor="@color/appbar"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_descricao"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_cultura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="Frutas, Pecuária, Flores"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/lb_cultura"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/lb_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/area_suportada"
                    android:textColor="@color/appbar"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cultura"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="Até 500 ha"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/lb_area"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/lb_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/categoria"
                    android:textColor="@color/appbar"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_area"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/pulverizadores"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/lb_categoria"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_orcamento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="5dp"
            android:text="@string/adicionar_ao_orcamento"
            android:textSize="14sp"
            android:background="@drawable/rounded_top_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
